--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ header .navbar a:hover{
   padding:1rem;
   margin:1rem 0;
   font-size: 1.7rem;
-  color:#fff;
+  color:black;
   text-transform: none;
   border:.1rem solid rgba(0,0,0,.3);
   border-radius: .5rem;
