--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ header .navbar a:hover{
 
 .review .box-container .box p{
   font-size: 1.5rem;
-  color:#eee;
+  color:#00223d;
   padding:1rem 0;
 }
 
