--- a/style.css
+++ b/style.css
@@ -327,12 +327,12 @@ header .navbar a:hover{
 
 .gallery .box-container .box .content h3{
   font-size: 2.5rem;
-  color:#fff;
+  color:#ffa500;
 }
 
 .gallery .box-container .box .content p{
   font-size: 1.5rem;
-  color:#fff;
+  color:#ffa500;
   padding:1rem 0;
 }
 
